doctored/css/themes.css
/* ... */
        menu.doctored-dialog.doctored-theme-flat .doctored-attribute-name {
            clear:left;
            text-align:right;
            margin-left:5px;
        }

        menu.doctored-dialog.doctored-theme-flat .doctored-attribute-value {
            text-align:left;
        }

    .doctored.doctored-theme-flat div.doctored-selection {
        background: #006ddb;
        border: solid 1px #ffffff;
        border: solid 1px rgba(255,255,255,0);
        border-left: 0px;
        border-right: 0px;
        color: white;
    }

    .doctored.doctored-theme-flat div.doctored-selection:hover {
        border: solid 1px #4477cc;
        border-left: 0px;
        border-right: 0px;
    }

    samp.doctored-tooltip.doctored-theme-flat {
        font-size: x-small;
        border-radius: 2px;
        font-weight:bold;
        padding:2px 7px 3px 5px;
        background: #c44;
        color: #fff;
    }

    menu.doctored-hamburger.doctored-theme-flat {
        padding: 0px;
        background: white;
        border: solid 1px black;
        padding-right:5px;
    }

        menu.doctored-hamburger.doctored-theme-flat a {
            padding:0px 5px 0px 0px;
            margin-left:5px;
            text-decoration: none;
            color: black;
        }

        menu.doctored-hamburger.doctored-theme-flat select {
            border: none;
            outline: none;
        }

        menu.doctored-hamburger.doctored-theme-flat option,
        menu.doctored-hamburger.doctored-theme-flat select {
            background: white;
            color: black;
        }






.doctored.doctored-theme-highcontrast,
menu.doctored-dialog.doctored-theme-highcontrast,
menu.doctored-menu.doctored-theme-highcontrast,
samp.doctored-tooltip.doctored-theme-highcontrast {
    font-family:'Raleway',Ubuntu,sans-serif;
    font-weight:bold;
}

    .doctored.doctored-theme-highcontrast:before {
        text-align:center;
        color: #000;
        font-size: small;
        font-weight:bold;
    }

        .doctored.doctored-theme-highcontrast.invalid:before {
            text-align:right;
            color: #000;
            background-color: none;
            margin-right:40px;
        }


        .doctored.doctored-theme-highcontrast.valid:before {
            padding: 2px;
            text-align:center;
            color: white;
            background: #000;
        }

    .doctored.doctored-theme-highcontrast .doctored-block {
        margin:0px;
        padding-top:0.5em;
        padding-bottom: 1em;
        padding-left: 2.5em; /* padding right should be left undefined */
        border-radius: 0px;
        border: solid 3px #000;
        background: #fff;
    }

        .doctored.doctored-theme-highcontrast .doctored-block .doctored-block {
            padding:0.5em 0px 1em 2.5em;
            margin-top: 0.2em;
            margin-right: 0px;
            
            border-radius: 2px;
        }

        .doctored.doctored-theme-highcontrast div.doctored-block:first-child {
            
        }

        .doctored.doctored-theme-highcontrast  > div.doctored-block:last-child {
            
        }

        .doctored.doctored-theme-highcontrast div.doctored-block:after {
            color:#000;
            font-weight:bold;
            font-size:small;
        }

        .doctored.doctored-theme-highcontrast div.doctored-block.has_errors:before {
            font-size:small;
            padding:4px 5px 4px 7px;
            border-radius:2px;
            border: solid 3px #000;
            font-weight:bold;
            color: #000;
        }

    .doctored.doctored-theme-highcontrast div.doctored-inline {
        background: #555555;
        background: rgba(30,30,30,0.1);
        padding-bottom:1em;
        border-bottom: 3px solid black;
        border-radius: 2px;
        vertical-align: text-top;
    }

        .doctored.doctored-theme-highcontrast div.doctored-inline:after {
            bottom:0.45em;
            color:#000000;
            font-size:small;
            font-weight:bold;
            font-weight:900;
        }


    menu.doctored-menu.doctored-theme-highcontrast {
        padding: 0px;
        text-transform:uppercase;
        font-size:small;
        font-weight:bold;
        opacity: 0.9;
        text-align:left;
    }

        menu.doctored-menu.doctored-theme-highcontrast:hover {
           opacity: 1;
        }

        menu.doctored-menu.doctored-theme-highcontrast a {
            display: inline-block;
            padding:8px 13px;
            margin-right:4px;
            text-decoration:none;
            background-color:#ffffff;
            border: 3px solid #000;
            color:#000000;
            border-radius: 2px;
        }

        menu.doctored-menu.doctored-theme-highcontrast a:hover {
            background-color:#000;
            color: #fff;
        }

        menu.doctored-menu.doctored-theme-highcontrast a:active {
            background-color:#555;
            border: solid 3px #555;
        }

    textarea.doctored-view-source-textbox.doctored-theme-highcontrast {
        border: none;
        padding: 0.5%;
        outline: none;
    }

    menu.doctored-dialog.doctored-theme-highcontrast {
        background: #ffffff;
        border: solid 3px #000000;
        color: black;
        border-radius: 2px;
        padding: 2px;
    }

    menu.doctored-dialog.doctored-theme-highcontrast * {
        font-size:small;
    }

    menu.doctored-dialog.doctored-theme-highcontrast a {
        padding:0px 5px;
        color:#333;
    }

        menu.doctored-dialog.doctored-theme-highcontrast a:hover {
            color: #000;
        }

    menu.doctored-dialog.doctored-theme-highcontrast label {
        color: #cccccc;
        text-align:left;
        padding-left:5px;
        font-weight:bold;
        font-size:x-small;
    }
/* ... */

